--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -1,14 +1,10 @@
-on: 
-  push:
-    branches: 
-      - main
-  pull_request:
+on: [workflow_dispatch, push, pull_request]
+
 
 name: Continuous integration
 
 jobs:
   check:
-    name: Check
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
